...
      modifier = Modifier.testTag("calendar_modal"),
      sheetState = sheetState,
      sheetContent = {
        EventCalendar(selectedDate = uiState.selectedDate, onDateSelected = onDateSelected)
      }) {
        Scaffold(
            modifier = Modifier.fillMaxSize().testTag("HomePage"),
            snackbarHost = { TopSnackbarHost(hostState = snackbarHostState) },
            topBar = {
              if (pagerState.currentPage == HomeScreenConstants.PAGER_HOME_PAGE) {
                HomeTopBar(
                    notificationState =
                        NotificationState(
...
    notificationCallbacks: NotificationCallbacks,
    navController: NavHostController
) {
  Box {
    IconButton(
        onClick = notificationCallbacks.onNotificationClick,
        modifier = Modifier.testTag("NotificationButton")) {
          NotificationBadge(unreadCount = notificationState.unreadCount)
        }
    DropdownMenu(
        expanded = notificationState.showNotifications,
        onDismissRequest = notificationCallbacks.onDismiss,
        modifier =
...
